# flowstate

./: .gitignore  CLAUDE.md  PRD.md  README.md  RESULTS.md  hypotheses.json  pyproject.toml  sessions.json  sprints.json
commands/: gate.md  ship.md  sprint-ship.md  sprint.md
dashboard/: package-lock.json  package.json  tailwind.config.js
experiment/: CODEBASE-MAP.md  CONTEXT-ADAPTATION.md  PORTFOLIO-POLISH.md  PROTOCOL.md  README.md  collector.sh  launcher.sh  lessons-snapshot.json  mapgen.sh  prds.md
imports/: README.md  aether-sprint-1-import.json  aether-sprint-2-import.json  aether-sprint-3-import.json  aether-sprint-4-import.json  aether-sprint-5-import.json  aether-sprint-6-import.json  aether-sprint-7-import.json  aether-sprint-8-import.json  clawclamp-sprint-0-import.json  clawclamp-sprint-1-import.json  clawclamp-sprint-10-import.json  clawclamp-sprint-11-import.json  clawclamp-sprint-12-import.json  clawclamp-sprint-2-import.json  clawclamp-sprint-3-import.json  clawclamp-sprint-4-import.json  clawclamp-sprint-5-import.json  clawclamp-sprint-6-import.json  clawclamp-sprint-7-import.json  clawclamp-sprint-8-import.json  clawclamp-sprint-9-import.json  crash-course-sprint-0-import.json  crash-course-sprint-1-import.json  crash-course-sprint-10-import.json  crash-course-sprint-13-import.json  crash-course-sprint-2-import.json  crash-course-sprint-3-import.json  crash-course-sprint-5-import.json  crash-course-sprint-6-import.json  crash-course-sprint-7-import.json  dappled-shade-sprint-6-import.json  emergent-order-sprint-1-import.json  (+103 more)
skills/: architect.md  (+2 more)
(+83 files in other folders)
